force-app/main/default/objects/CTE__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>CTEs</relationshipLabel>
    <relationshipName>CTEs</relationshipName>

    <type>Lookup</type>
</CustomField>