force-app/main/default/objects/CTE__c/fields/F2F_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>F2F_Contact_Date__c</fullName>
    <description>Holds the HCP ID for when a CTE made face-to-face contact with an HCP and date of when the contact was made</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Holds the HCP ID for when a CTE made face-to-face contact with an HCP and date of when the contact was made</inlineHelpText>
    <label>F2F Contact Date</label>

    <type>DateTime</type>
</CustomField>