force-app/main/default/objects/CTE__c/fields/First_and_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>First_and_Last_Name__c</fullName>
    <description>Clinical Trial Educator First and Last Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Clinical Trial Educator First and Last Name</inlineHelpText>
    <label>First and Last Name</label>
    <length>255</length>

    <type>Text</type>
</CustomField>