force-app/main/default/objects/CTE__c/fields/HCP__c.field-meta.xml
<CustomField>
    <fullName>HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CTEs (HCP)</relationshipLabel>
    <relationshipName>CTEs</relationshipName>

    <type>Lookup</type>
</CustomField>