force-app/main/default/objects/CTE__c/fields/HCP_outreach_Status__c.field-meta.xml
<CustomField>
    <fullName>HCP_outreach_Status__c</fullName>
    <description>Description of HCP outreach</description>
    <inlineHelpText>Description of HCP outreach</inlineHelpText>
    <label>HCP Outreach Status</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Contacted</fullName>
            </value>
            <value>
                <fullName>Open Lead</fullName>
            </value>
            <value>
                <fullName>Warm Lead</fullName>
            </value>
            <value>
                <fullName>Agreed to Refer</fullName>
            </value>
            <value>
                <fullName>Will not Refer</fullName>
            </value>
            <value>
                <fullName>Non Responsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>