force-app/main/default/objects/CTE__c/fields/PI__c.field-meta.xml
<CustomField>
    <fullName>PI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PI</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CTEs (PI)</relationshipLabel>
    <relationshipName>CTE</relationshipName>

    <type>Lookup</type>
</CustomField>